// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertInline:.......................SnapShot Testing: Error AlertInline Matches jest snapshot 1`] = `
<div
  className="alert-inline error"
  role="alert"
>
  <svg
    className="alert-icon"
    viewBox="0 0 32 32"
  >
    <title>
      
        Error Notification
    
    </title>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        className="Notification-Error-Light_svg__path-01"
        d="M21.744 29.867l8.123-8.123V10.256l-8.123-8.123H10.256l-8.123 8.123v11.488l8.123 8.123h11.488zM8.956 31.583l-8.331-8.33c-.4-.4-.625-.944-.625-1.51V10.257c0-.565.225-1.108.625-1.508L8.748.625c.4-.4.943-.625 1.508-.625h11.488c.566 0 1.109.225 1.509.625l8.122 8.123c.4.4.625.943.625 1.508v11.488c0 .565-.225 1.108-.625 1.508l-8.122 8.123c-.4.4-.943.625-1.509.625H9.962c-.377 0-.74-.15-1.006-.417z"
      />
      <path
        className="Notification-Error-Light_svg__path-02"
        d="M17.27 20.64a.825.825 0 01-.145.488.52.52 0 01-.171.16.356.356 0 01-.174.045h-1.56c-.133 0-.248-.068-.345-.205a.825.825 0 01-.145-.489l-.508-12.834c0-.188.049-.351.145-.488.097-.137.212-.206.345-.206h2.576c.133 0 .248.069.345.206.096.137.145.3.145.488L17.27 20.64zM16 25.6a1.422 1.422 0 110-2.844 1.422 1.422 0 010 2.844z"
      />
    </g>
  </svg>
  <div
    className="message"
  >
    <b>
      This is some copy for the body of the AlertInline
    </b>
  </div>
</div>
`;

exports[`AlertInline:.......................SnapShot Testing: Info AlertInline Matches jest snapshot 1`] = `
<div
  className="alert-inline info"
  role="alert"
>
  <svg
    className="alert-icon"
    viewBox="0 0 32 32"
  >
    <title>
      
        Information Notification
    
    </title>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        className="Notification-Info-Light_svg__path-01"
        d="M16 29.867c7.658 0 13.867-6.209 13.867-13.867 0-7.658-6.209-13.867-13.867-13.867C8.342 2.133 2.133 8.342 2.133 16c0 7.658 6.209 13.867 13.867 13.867zM16 32C7.163 32 0 24.837 0 16S7.163 0 16 0s16 7.163 16 16-7.163 16-16 16z"
      />
      <path
        className="Notification-Info-Light_svg__path-02"
        d="M16 11.022a1.6 1.6 0 100-3.2 1.6 1.6 0 000 3.2zm1.422 13.895a.71.71 0 01-.175.48.533.533 0 01-.416.203H15.17a.533.533 0 01-.416-.202.71.71 0 01-.175-.481v-11.79a.71.71 0 01.175-.48.533.533 0 01.416-.203h1.662c.16 0 .3.068.416.203a.71.71 0 01.175.48v11.79z"
      />
    </g>
  </svg>
  <div
    className="message"
  >
    <b>
      This is some copy for the body of the AlertInline
    </b>
  </div>
</div>
`;

exports[`AlertInline:.......................SnapShot Testing: Success AlertInline Matches jest snapshot 1`] = `
<div
  className="alert-inline success"
  role="alert"
>
  <svg
    className="alert-icon"
    viewBox="0 0 32 32"
  >
    <title>
      
        Success Notification
    
    </title>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        className="Notification-Success-Light_svg__path-01"
        d="M16 29.867c7.658 0 13.867-6.209 13.867-13.867 0-7.658-6.209-13.867-13.867-13.867C8.342 2.133 2.133 8.342 2.133 16c0 7.658 6.209 13.867 13.867 13.867zM16 32C7.163 32 0 24.837 0 16S7.163 0 16 0s16 7.163 16 16-7.163 16-16 16z"
      />
      <path
        className="Notification-Success-Light_svg__path-02"
        d="M12.936 19.61l9.71-9.984a1.422 1.422 0 112.039 1.983L12.993 23.63l-6.1-5.927a1.422 1.422 0 011.981-2.04l4.062 3.946z"
      />
    </g>
  </svg>
  <div
    className="message"
  >
    <b>
      This is some copy for the body of the AlertInline
    </b>
  </div>
</div>
`;

exports[`AlertInline:.......................SnapShot Testing: Warning AlertInline Matches jest snapshot 1`] = `
<div
  className="alert-inline warning"
  role="alert"
>
  <svg
    className="alert-icon"
    viewBox="0 0 32 32"
  >
    <title>
      
        Warning Notification
    
    </title>
    <g
      fill="none"
      fillRule="evenodd"
    >
      <path
        className="Notification-Warning-Light_svg__path-01"
        d="M16.968 2.767a1.084 1.084 0 00-1.938 0L2.282 28.264a1.084 1.084 0 00.97 1.569h25.496a1.084 1.084 0 00.97-1.569L16.967 2.767zm1.939-.97l12.749 25.498A3.251 3.251 0 0128.748 32H3.251a3.251 3.251 0 01-2.908-4.705L13.091 1.798a3.251 3.251 0 015.816 0z"
      />
      <path
        className="Notification-Warning-Light_svg__path-02"
        d="M17.27 22.417a.825.825 0 01-.145.488.52.52 0 01-.171.162.356.356 0 01-.174.044h-1.56c-.133 0-.248-.068-.345-.206a.825.825 0 01-.145-.488l-.508-12.123c0-.189.049-.351.145-.488.097-.137.212-.206.345-.206h2.576c.133 0 .248.069.345.206.096.137.145.3.145.488l-.508 12.123zM16 27.377a1.422 1.422 0 110-2.844 1.422 1.422 0 010 2.845z"
      />
    </g>
  </svg>
  <div
    className="message"
  >
    <b>
      This is some copy for the body of the AlertInline
    </b>
  </div>
</div>
`;
